all: replace echo with printf for portable reason

--- a/enhancd/Makefile
+++ b/enhancd/Makefile
@@ -9,7 +9,7 @@ config.$(PKG_NAME): install.$(PKG_NAME)
 	$(H)echo "-- $(PKG_NAME): setup config --"
 	$(H)echo "$(INIT)" >> $(CONFIG_DIR)/bootstrap.sh
 	$(H)grep -q -w "$(CMD)" ~/.bashrc ||
-			echo -e "$(CMD)" >> ~/.bashrc
+			printf -- "$(CMD)\n" >> ~/.bashrc
 
 install.$(PKG_NAME):
 	$(H)echo "-- $(PKG_NAME): install package --"
