all: replace echo with printf for portable reasons

--- a/enhancd/Makefile
+++ b/enhancd/Makefile
@@ -9,10 +9,10 @@ config.$(PKG_NAME): install.$(PKG_NAME)
 	$(H)echo "-- $(PKG_NAME): setup config --"
 	$(H)echo "$(INIT)" >> $(CONFIG_DIR)/bootstrap.sh
 	$(H)grep -q -w "$(CMD)" ~/.bashrc ||
-			echo -e "$(CMD)" >> ~/.bashrc
+			printf -- "$(CMD)\n" >> ~/.bashrc
 
 install.$(PKG_NAME):
-	$(H)echo "-- $(PKG_NAME): download and install latest version --"
+	$(H)echo "-- $(PKG_NAME): install package --"
 	$(H)if [[ ! -d $(CONFIG_DIR)/.git ]]; then
 		git clone -n --depth=1 https://github.com/b4b4r07/enhancd.git $(TMP)
 		mv $(TMP)/.git $(CONFIG_DIR)
