tmux: enable pane border

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,6 +36,32 @@ setw -g  monitor-bell     on    # monitor bell in the window
 setw -g  visual-bell      on    # show visual alert when task complete
 setw -g  bell-action      other # only other, not current window, triggers bell
 
+# Border
+set -g pane-border-status top
+set -g pane-border-format " #{?pane_active,#[reverse],}[#P:#{pane_pid}]#[default] TTY:#{pane_tty} CMD:#{pane_current_command} "
+# Used for switching window and creating multiple panes
+set-hook -g -w pane-focus-in "
+	if -F '#{e|>:#{window_panes},1}' {
+		if -F '#{==:#{window_zoomed_flag},1}' {
+			set -w pane-border-status off
+		}{
+			set -w pane-border-status top
+		}
+	} {
+		set -w pane-border-status off
+	}"
+# Used for zooming pane under the same window
+set-hook -g -w after-resize-pane "
+	if -F '#{e|>:#{window_panes},1}' {
+		if -F '#{==:#{window_zoomed_flag},1}' {
+			set -w pane-border-status off
+		}{
+			set -w pane-border-status top
+		}
+	}{
+		set -w pane-border-status off
+	}"
+
 # Add alias for split-window
 # set -s command-alias[10] vs='split-window -h'
 # set -s command-alias[11] hs='split-window -v'
