tmux: resolve nvim color warning in `checkhealth`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,12 +18,20 @@ tmux_tool="${tmux_home}/tools"
 
 set -g prefix `	# set ` as prefix key
 
-# solve colorized issue in tmux
+# https://codeberg.org/scy/dotfiles/src/branch/main/.tmux.conf
 # For nvim :checkhealth setting
-set -g  default-terminal   "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-# set -g default-terminal "screen-255color"
-# set -g default-terminal "tmux-256color"
+# If the outer terminal is signalling true color support, define an override, because its terminfo file might not know
+# about this. This is for example the case in MS Terminal, which defines itself as xterm-256color.
+if '[ "$COLORTERM" = "24bit" -o "$COLORTERM" = "truecolor" ]' {
+	set -g terminal-overrides ',xterm*:Tc'
+}
+# Nowadays, I have (at least) 256-color terminals everywhere, and also a real "tmux" terminfo. Compared to
+# `screen-256color`, this has the added advantage of italic text working (instead of displayed with reversed colors).
+set -g default-terminal tmux-256color
+# However, there is one terminal where I don't really have 256 colors: The Linux Console.
+if '[ "$TERM" = "linux" ]' {
+	set -g default-terminal tmux
+}
 
 setw -g  automatic-rename       # rename window automately
 setw -g  mode-keys        vi    # set copy-mode to vi style
