tmux: enlarge history-limit, auto renumber win and auto resize win

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,14 +35,16 @@ if '[ "$TERM" = "linux" ]' {
 
 setw -g  automatic-rename       # rename window automately
 setw -g  mode-keys        vi    # set copy-mode to vi style
-set  -g  base-index       1     # set window index to 1
-set  -g  pane-base-index  1     # set pane index to 1
-set  -g  history-limit    20000 # scroll history size
+set  -g  base-index       1     # set to the leftest number on the keyboard
+set  -g  pane-base-index  1     # set to the leftest number on the keyboard
+set  -g  history-limit    64000 # scroll history size
 set  -sg escape-time      0     # no waiting time
 set  -g  focus-events     on    # Used for vim-tmux-clipboard
 setw -g  monitor-bell     on    # monitor bell in the window
 setw -g  visual-bell      on    # show visual alert when task complete
 setw -g  bell-action      other # only other, not current window, triggers bell
+set  -g  renumber-windows on    # renumber window index if any window is closed
+set  -g aggressive-resize on    # determine the size of windows depending on where they are _displayed_, not where they are attached to.
 
 # Border
 set -g pane-border-status top
