tmux: add panes as sidebar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,6 +78,33 @@ set-hook -g -w after-resize-pane "
 
 ## Key mapping
 
+# Reserved usable keys:
+# unbind d
+# unbind n
+bind o if -F '#{e|>:#{window_panes},1}' {
+	# TODO:
+	# Add `primary` and `secondary` tags to ensure the sequence would
+	# not be broken
+	if -F '#{==:#{window_zoomed_flag},1}' {
+		resize-pane -Z
+		select-pane -l
+	} {
+		select-pane -l
+		resize-pane -Z
+	}
+} 'split-window -v -f -c "#{pane_current_path}" -l "25%"'
+bind i if -F '#{e|>:#{window_panes},1}' {
+	# TODO:
+	# Same as above
+	if -F '#{==:#{window_zoomed_flag},1}' {
+		resize-pane -Z
+		select-pane -l
+	} {
+		select-pane -l
+		resize-pane -Z
+	}
+} 'split-window -h -f -c "#{pane_current_path}" -l "33%"'
+
 # Layout:
 # - unidirectional switch to next layout
 unbind M-1
@@ -118,11 +145,10 @@ unbind Down		# Change to the pane below of the current pane.
 unbind Left		# Change to the pane left of the current pane.
 unbind Right	# Change to the pane right of the current pane.
 unbind '"'
-bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 unbind %
+bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x
-unbind o
 bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
 
 # Copy-mode:
@@ -147,7 +173,7 @@ bind p paste-buffer
 # bind [ popup -E -T " Main Menu " \
 # 		"tmux new -n plugin ${tmux_tool}/main-menu.bash ';' \
 # 		set status off"
-bind o   run "${tmux_tool}/debug-console.bash"
+# bind o   run "${tmux_tool}/debug-console.bash"
 bind h   list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind ,   new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind ';' new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
