tmux: optimize plugin-menu script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -154,9 +154,7 @@ bind ';' new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
 bind C   confirm-before -p "Do you want to clear history? (y/n)" clear-history
 
 ## Plugins
-bind ] popup -EE -T " Plugin Menu " \
-		"tmux new -n plugin ${tmux_tool}/plugin-menu.bash ';' \
-		set status off"
+bind ] run "${tmux_tool}/plugin-menu.bash"
 
 if '[[ $OSTYPE == "linux-gnu" ]]' {
 	if '[[ -n "$WSL_DISTRO_NAME" ]]' {
