tmux: as the pane titles have been highlight, no need to display panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -149,7 +149,7 @@ unbind %
 bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x
-bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
+bind -r \\ select-pane -Z -t :.+     # enhance keybind n
 
 # Copy-mode:
 unbind [
